Add a TimerRepeatingTasksMain class