@@ -19,4 +19,5 @@ Consider that when implementing timing-related code.
 1. From the repository root, run any of the different main methods with:
   * `java --enable-preview --source 14 timer/src/main/java/dgroomes/TimerDaemonMain.java --non-daemon-thread`
   * `java --enable-preview --source 14 timer/src/main/java/dgroomes/TimerDaemonMain.java --daemon-thread`
+  * `java --enable-preview --source 14 timer/src/main/java/dgroomes/TimerRepeatingTasksMain.java`
   * `java --enable-preview --source 14 timer/src/main/java/dgroomes/TimerMultipleTasksMain.java`
